testsuite/tests/checks/implicit_in_param/test.out
implicit.ads:2:21: error: implicit IN mode in parameter specification
2 |    procedure Proc1 (I :    Integer);          --  FLAG
  |                     ^ 

